# ai-usage-dashboard

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  normalizer.py  refresh.py  repository.py  scheduler.py
backend/app/providers/: __init__.py  base.py  codex.py  copilot.py  deepseek.py  opencode.py  opencode_api.py  opencode_browser.py  opencode_parser.py
backend/app/routers/: admin.py  health.py  providers.py  summary.py
backend/tests/: conftest.py  test_api.py  test_codex.py  test_copilot.py  test_deepseek.py  test_models.py  test_normalizer.py  test_opencode.py  test_opencode_api.py  test_opencode_cookies.py  test_opencode_parser.py  test_persistence.py  test_refresh.py
backend/tests/fixtures/: codex_wham_usage.json  codex_wham_usage_real.json  copilot_user.json  deepseek_balance.json  opencode_cookies.json  opencode_dashboard.html  opencode_dashboard_partial.html  opencode_go_auth.json  opencode_models.json  opencode_usage.json  opencode_usage_flat.json
dashboard/: README.md
dashboard/emulator/: README.md  index.html  modern.html  pixel-command-grid.html  retro.html  variants.html
dashboard/firmware/: README.md  platformio.ini
dashboard/firmware/include/: config.example.h  tft_espi_setup_cyd.h
dashboard/firmware/src/: main.cpp
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
scripts/: deploy-server.sh
