[project]
name = "ai-usage-backend"
version = "1.0.0"
description = "Ubuntu-hosted FastAPI backend aggregating AI provider usage for ESP32 dashboards"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    # pydantic 2.13 spuriously warns about stacked @field_validator methods.
    "ignore:.*overrides an existing Pydantic.*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
